<resources>
    <string name="app_name">ProjectApp</string>
    <!--  Login Page  -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_doctor">doctor Login</string>
    <string name="login_button_patient">patient Login</string>
    <string name="signup_button">Sign Up</string>
    <!--  Dashboard Page  -->
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_message">Welcome,</string>
    <string name="upcoming_appointments_message">Upcoming Appointment</string>
    <string name="view_all">View All Appointments</string>

    <string name="book_appointment">Book Appointment</string>
    <string name="profile">Profile</string>
    <string name="past_patients">Patients</string>

    <!--  Register Page  -->
    <string name="r_text_email">Email</string>
    <string name="r_email_hint">example@abc.com</string>
    <string name="r_text_first_name">First Name</string>
    <string name="r_text_last_name">Last Name</string>
    <string name="r_text_gender">Gender</string>
    <string name="r_text_password">Password</string>
    <string name="r_text_confirm_password">Confirm Password</string>
    <string name="r_text_identity">Register as</string>
    <string name="r_button_sign_up">Sign Up</string>
    <string name="r_radio_male">Male</string>
    <string name="r_radio_female">Female</string>
    <string name="r_radio_patient">Patient</string>
    <string name="r_radio_doctor">Doctor</string>
    <string name="title_activity_doctro_dashboard">DoctroDashboardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="history">History</string>

</resources>